# di-guild

./: Cargo.toml
di-core/: Cargo.toml
di-core/src/: error.rs  lib.rs  simc.rs
di-core/tests/: dh.txt  dk.txt  mage.txt  paladin.txt  warlock.txt
di-slash/: Cargo.toml
di-slash/src/: commands.rs  config.rs  discord.rs  error.rs  handlers.rs  main.rs  mw.rs
di-slash/src/discord/: api.rs  commands.rs  crypto.rs  mod.rs  roles.rs
di-worker/: Cargo.toml
di-worker/src/: config.rs  main.rs
infra/: package-lock.json  package.json
infra/lib/: infra-stack.ts
